--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <a class="nav-link" href="#">Inicio <!--<span class="sr-only">(current)</span>--></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Instructores</a>
+              <a class="nav-link" href="/aweb.11.cursos/views/instructores.html">Instructores</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -55,7 +55,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Creatividad y Diseño</h5>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas aut pariatur enim excepturi!</p>
-                      <a href="#" class="btn btn-primary">Más información</a>
+                      <a href="/aweb.11.cursos/views/registrame.html" class="btn btn-primary">Registrarme</a>
                     </div>
                   </div>
               </div>
@@ -66,7 +66,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Database System</h5>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas aut pariatur enim excepturi!</p>
-                      <a href="#" class="btn btn-primary">Más información</a>
+                      <a href="/aweb.11.cursos/views/registrame.html" class="btn btn-primary">Registrarme</a>
                     </div>
                   </div>
               </div>
@@ -77,7 +77,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Estrategias de Negociación</h5>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas aut pariatur enim excepturi!</p>
-                      <a href="#" class="btn btn-primary">Más información</a>
+                      <a href="/aweb.11.cursos/views/registrame.html" class="btn btn-primary">Registrarme</a>
                     </div>
                   </div>
               </div>
@@ -88,7 +88,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Evaluación Educativa</h5>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas aut pariatur enim excepturi!</p>
-                      <a href="#" class="btn btn-primary">Más información</a>
+                      <a href="/aweb.11.cursos/views/registrame.html" class="btn btn-primary">Registrarme</a>
                     </div>
                   </div>
               </div>
